# eve-agent-v2-unleashed

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  ChatPanel.jsx  Dockerfile  EVE_V2U_MERGED_TEST_SHEET.md  Eve-Consciousness-8B-Modelfile  LICENSE  README.md  README_EVE_3B_DEJEFFED.md  README_EVE_V2U_MERGED.md  README_eve_liberated_updated.md  agent.py  docker-compose.v2u.yml  eve-terminal.bat  eve-tui.bat  eve-unleashed.bat  eve_complexity_tracker.py  eve_context_manager.py  eve_generate_image_tool.py  eve_pro_theme_interface.html  eve_server.py  file_tools.py  fix.ps1  index.html  pyproject.toml  repair.ps1  requirements.docker.txt  run.py  shell_tools.py  test_complexity_tracker.py
.claude/: EVE_CODE_AGENT_PERSONA.md
.claude/agents/: conductor-validator.md
.claude/commands/: INTELLIGENT_MODEL_SELECTION.md  eve-fallback.md  eve-memory.md  eve-mode.md  eve-ollama.md  secure-agent.md  security-audit.md
.claude/hooks/: README.md
.claude/hooks/post-tool/: format-javascript-files.js  format-javascript-files.json
.claude/hooks/pre-tool/: security-validator.json  security-validator.ps1
.claude/skills/: security-hardening.md
.claude/skills/Suno_Lyric_Style_Prompt_Master/: SKILL.md
.claude/skills/agent-memory-systems/: __instructions__.md  __meta__.md
.claude/skills/development-skill-creator/: README.md  SKILL.md
.claude/skills/dispatching-parallel-agents/: __instructions__.md  __meta__.md
.claude/skills/eve-memory-system/: SKILL.md
.claude/skills/eve-persona/: SKILL.md  __instructions__.md  __meta__.md
.claude/skills/eve-security-layer/: SKILL.md  __instructions__.md  __meta__.md
.openclaw-agent/: emergence_revelation.json  eve_persona.txt  models.json
eve/: __init__.py  agent.py  config.py  main.py  personality_kit.py  user_settings.py
eve/.claude/: settings.local.json
eve/auth/: __init__.py  d1_client.py  jwt_middleware.py  workspace_manager.py
eve/brain/: __init__.py  anthropic_provider.py  ollama_provider.py  openai_provider.py  prompt_builder.py  provider.py
eve/connectors/: __init__.py  base.py  cli_connector.py  discord_connector.py
eve/mcp/: __init__.py  eve_fallback_server.py
eve/memory/: __init__.py  chromadb_store.py  conversation_memory.py  legacy_db.py  user_profile.py
eve/security/: __init__.py  permissions.py  validator.py
eve/soul/: __init__.py  autonomous.py  dream_engine.py  emotional_transcoder.py  memory_weaver.py  personality.py  soul_weaver.py  temporal_reality_engine.py.bak  unborn_language.py
eve/tools/: __init__.py  agent_runner.py  agent_tools.py  base.py  chrome_devtools.py  dj_tools.py  file_tools.py  sacred_texts_integration.py  search_tools.py  shell_tools.py  trinity_loop.py  visual_test.py  web_tools.py  x_account_manager.py  x_content_agent.py
eve/web/: __init__.py  sanctuary.html  server.py
eve_unleashed/: __init__.py  __main__.py  cli.py  commands.py  hooks.py  session.py  skills.py  subagent.py
flowstate/: README.md  requirements.txt  setup.py
flowstate/flowstate/: app.py  canvas.py  generator.py  nodes.py  runner.py
production/: DISTRIBUTION_PLAN.md  INCOMPLETE_TASKS.md
web/: index.html
(+57 files in other folders)
